@@ -34,6 +34,8 @@
 	* src/device.c, src/debug.[ch], src/wrappers.[ch], src/device_tcp.c :
 	Fix compiler warnings.
 
+	* src/wrappers.c : Added timersub() for solaris.
+
 2006-11-16 Jim Garlick <garlick@llnl.gov>
 
 	* ChangeLog : Start over for 2.0 branch.  Old moved to ChangeLog-1.0.
